--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "framework": "nextjs",
-  "installCommand": "npm ci || npm i",
+  "installCommand": "npm i",
   "buildCommand": "npm run build"
 }
