--- a/package.json
+++ b/package.json
@@ -5,27 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "firebase": "^10.12.4",
+    "firebase": "^9.6.11",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "typescript": "5.4.5",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20"
-  },
-  "engines": {
-    "node": ">=18"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.0",
+    "uuid": "^9.0.0"
   }
 }
